# python-standard-repository

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yml  main.yml  run-tests.yml
scripts/: poetry_init.sh
src/: extractor.py
tests/unit/: test_transform_raw_data.py
